fix: fix blockquote spacing

--- a/src/templates/blog-post.scss
+++ b/src/templates/blog-post.scss
@@ -152,7 +152,7 @@
 
   blockquote {
     $decoration-border-width: 5px;
-    $padding-vertical: var(--cs-xxs);
+    $padding-vertical: 0;
     $padding-horizontal: var(--ls-xxs);
     $margin-vertical: var(--ls-md);
     $margin-horizontal: calc(-1 * $padding-horizontal);
@@ -164,8 +164,8 @@
     margin: $margin-vertical $margin-horizontal;
     padding-top: $padding-vertical;
     padding-bottom: $padding-vertical;
-    padding-right: var(--ls-xxs);
-    padding-left: calc(var(--ls-xxs) - #{$decoration-border-width});
+    padding-right: $padding-horizontal;
+    padding-left: calc(#{$padding-horizontal} - #{$decoration-border-width});
 
     &,
     p {
